<resources>
    <string name="app_name">Galletas decoradas de Liz </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="requiredErrorText"> es requerido</string>
    <string name="updateErrorText">Error tratando de actualizar</string>
    <string name="insertErrorText">Error tratando de insertar</string>
    <string name="deleteErrorText">Error tratando de eliminar</string>

    <string name="dialogDeleteTitle">Eliminar</string>
    <!--Main Measurement Text-->
    <string name="measurementDiaglogConfirmationText">¿Seguro quieres eliminar la medida(s)?</string>
    <string name="measurementMultipleSelectionErrorText">Error: Mas de una medida a sido seleccionada</string>
    <!-- Measurement Form Text  -->
    <string name="measurementFormAddTitle">Añadir medida</string>
    <string name="measurementFormUpdateTitle">Modificar medida</string>
    <string name="measurementFormSpinnerErrorText">Selecione un tipo de medida</string>

    <!--Main Product Text-->
    <string name="productDiaglogConfirmationText">¿Seguro quieres eliminar el producto(s)?</string>
    <string name="productMultipleSelectionErrorText">Error: Mas de un producto a sido seleccionad</string>
    <!-- Product Form Text  -->
    <string name="productFormAddTitle">Añadir producto</string>
    <string name="productFormUpdateTitle">Modificar producto</string>

    <!--Main Recipe Form Texts-->
    <string name="recipeDiaglogConfirmationText">¿Seguro quieres eliminar la(s) receta(s)?</string>
    <string name="recipeMultipleSelectionErrorText">Error: Mas de una receta a sido seleccionada</string>
    <!-- Recipe Form Text  -->
    <string name="recipeFormAddTitle">Añadir receta</string>
    <string name="recipeFormUpdateTitle">Modificar receta</string>
    <string name="errorRecipeProductsForm">Los productos no son validos</string>
    <string name="errorRecipeForm">Porfavor verifique que todo los datos esten correctos.</string>
    <string name="recipeFormQuantity">Cantidad</string>
    <!--Main Order Text-->
    <string name="orderDiaglogConfirmationText">¿Seguro quieres eliminar la(s) orden(es)?</string>
    <string name="ordenMultipleSelectionErrorText">Error: Mas de una orden a sido seleccionada</string>
    <!-- Order Form Text  -->
    <string name="ordenFormAddTitle">Añadir orden</string>
    <string name="ordenFormUpdateTitle">Modificar orden</string>

    <string name="emptyFields">Empty Fields</string>
    <string name="select">Seleccione</string>

    <string name="takePicture">Tomar foto</string>
    <string name="chooseFromGallery">Elegir desde galeria</string>
    <string name="cancel">Cancelar</string>
    <string name="chooseOption">Elegir Opciòn</string>
    <string name="simbol_previous"><![CDATA[<]]></string>
    <string name="simbol_next"><![CDATA[>]]></string>
    <string name="mainSelectOrder">Seleccione la orden</string>

    <string name="menuSettings">Configuraciones</string>
    <string name="menuMeasurements">Medidas</string>
    <string name="menuProducts">Productos</string>
    <string name="menuRecipes">Recetas</string>
    <string name="menuOrders">Pedidos</string>
    <string name="menuHome">Principal</string>

    <string name="mainDateBefore">No se puede selecionar un dia anterior a la fecha actual</string>
    <string name="save">Guardar</string>
    <string name="orderGaintxt">Ganancia:</string>
    <string name="orderSell">Venta</string>
    <string name="orderTotalSell">Total venta:</string>
    <string name="orderTotalCost">Costo Total de la orden:</string>
    <string name="orderDeliverDate">Fecha de entrega</string>
    <string name="orderClientName">Nombre del Cliente</string>
    <string name="orderAddRecipe">Añadir receta</string>


</resources>
