<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.orders.FormOrder">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/TextSize"
                android:paddingTop="6dp"
                android:textColor="@color/colorPrimaryTextDark"
                android:id="@+id/txtOrderId"
                android:visibility="gone"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/orderClientName"
                android:inputType="textCapWords"
                android:id="@+id/etClientName"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtDeliveryDate"
                android:text="@string/orderDeliverDate"
                android:textColor="@color/colorPrimaryTextDark"
                android:textSize="17sp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/etClientName"/>
            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/txtDeliveryDate"
                android:id="@+id/dpDeliveryDate"
                android:textColor="@color/colorPrimaryText"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/llRecipes"
                android:layout_below="@id/dpDeliveryDate"
                android:orientation="vertical"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/llRecipes"
                android:layout_marginTop="10dp">
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/btnAddRecipe"
                    app:srcCompat="@drawable/ic_add"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginRight="80dp"
                    android:padding="2dp"
                    android:contentDescription="@string/orderAddRecipe"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:text="@string/orderTotalCost"
                        android:textSize="@dimen/TextSize"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryTextDark"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:id="@+id/txtTotalCost"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:textSize="@dimen/TextSize"
                        android:textColor="@color/colorPrimaryTextDark"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/orderTotalSell"
                        android:textSize="@dimen/TextSize"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryTextDark"
                        android:layout_marginTop="10dp"/>
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:layout_marginTop="5dp"
                        android:hint="@string/orderSell"
                        android:focusable="false"
                        android:id="@+id/etTotalSell"
                        android:inputType="numberDecimal"
                        android:paddingTop="10dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:text="@string/orderGaintxt"
                        android:textSize="@dimen/TextSize"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryTextDark"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"/>
                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:id="@+id/txtGain"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:textSize="@dimen/TextSize"
                        android:textColor="@color/colorPrimaryTextDark"/>
                </LinearLayout>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:id="@+id/sOrderState"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/errorText"
                    android:id="@+id/tvErrorSpinnerOrderState"
                    android:visibility="gone"
                    android:textSize="@dimen/TextSize"/>
                <Button
                    android:id="@+id/btnSaveOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="39dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/save"
                    android:drawableStart="@drawable/ic_save"
                    android:padding="15dp"
                    android:textColor="@color/colorPrimaryText" />
            </LinearLayout>


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
